--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-        <link ref="stylesheet" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
     <body>
