--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div id="app">Hardcode render</div>
-        <script src="bundle.js"></script>
+        <script src="https://s3-us-west-1.amazonaws.com/fec-reviews-cloud-host/bundle.js"></script>
+        <!-- <script src="bundle.js"></script> -->
     </body>
 </html>
