--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8">
         <title>Reviews</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
