--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,8 @@
     <body>
         <div id="app">Hardcode render</div>
         <script src="bundle.js"></script>
+        <script>
+            ReactDOM.render(<App />, document.getElementById('app'));
+        </script>
     </body>
 </html>
